style change red header

--- a/css/estructura.css
+++ b/css/estructura.css
@@ -10,7 +10,7 @@ header{
     height:115px;
     padding: 0px;
     text-align: center;
-    background-color: #202223;
+    background-color:red;
     border-radius: 5px;
     border-color: white 3px solid;
     
